<resources>
    <string name="app_name">Android6C3R</string>
    <string name="un_jugador">1 Player</string>
    <string name="dos_jugadores">2 Player</string>
    <string name="facil">Easy</string>
    <string name="imposible">Insane</string>
    <string name="normal">Normal</string>
    <string name="casilla">Tile</string>
    <string name="circulo_gana">CIRCLES_WIN!</string>
    <string name="aspas_gana">CROSSES_WIN!</string>
    <string name="empate">TIE!</string>
</resources>