<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_pantalla"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            style="@style/titulo"
            android:text="@string/app_name"
            />
        <Button
            android:id="@+id/unJug"
            android:text="@string/un_jugador"
            style="@style/boton"
           />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/facil"
                android:text="@string/facil"
                style="@style/radio"
                />
            <RadioButton
                android:id="@+id/normal"
                android:text="@string/normal"
                style="@style/radio"
                />
            <RadioButton
                android:id="@+id/imposible"
                android:text="@string/imposible"
                style="@style/radio"
                />

        </RadioGroup>
        <Button
            android:id="@+id/dosJug"
            android:text="@string/dos_jugadores"
            style="@style/boton"
            />

    </LinearLayout>
    <Space
        android:layout_width="100dp"
        android:layout_height="0dp"/>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="3"
        >
        <ImageView
            android:id="@+id/a1"
            style="@style/casilla"
            />
        <ImageView
            android:id="@+id/a2"
            style="@style/casilla"
            />
        <ImageView
            android:id="@+id/a3"
            style="@style/casilla"
            android:src="@drawable/circulo"
            />
        <ImageView
            android:id="@+id/b1"
            style="@style/casilla"
            />
        <ImageView
            android:id="@+id/b2"
            style="@style/casilla"
            android:src="@drawable/circulo"
            />
        <ImageView
            android:id="@+id/b3"
            style="@style/casilla"
            />
        <ImageView
            android:id="@+id/c1"
            style="@style/casilla"
            android:src="@drawable/circulo"
            />

        <ImageView
            android:id="@+id/c2"
            style="@style/casilla"
            android:src="@drawable/aspa"
            />
        <ImageView
            android:id="@+id/c3"
            style="@style/casilla"
            android:src="@drawable/aspa"
            />
    </GridLayout>


</LinearLayout>